--- a/templates/club/dojo.html.twig
+++ b/templates/club/dojo.html.twig
@@ -51,46 +51,88 @@
         </ul>
         <div class="tab-content" id="dojoTabContent">
             <div id="miniPoussins" class="tab-pane fade show active" role="tabpanel" aria-labelledby="miniPoussins-tab">
-                <h3>Mini-Poussins - {{ miniPoussin.annee }}</h3>
-                <p>
-                    {{ miniPoussin.texte|raw }}
-                </p>
+                {% if miniPoussin %}
+                    <h3>Mini-Poussins - {{ miniPoussin.annee }}</h3>
+                    <p>
+                        {{ miniPoussin.texte|raw }}
+                    </p>
+                {% else %}
+                    <p>
+                        no records found
+                    </p>
+                {% endif %}
             </div>
             <div id="poussins" class="tab-pane fade" role="tabpanel" aria-labelledby="poussins-tab">
-                <h3>Poussins - {{ poussin.annee }}</h3>
-                <p>
-                    {{ poussin.texte|raw }}
-                </p>
+                {% if poussin %}
+                    <h3>Poussins - {{ poussin.annee }}</h3>
+                    <p>
+                        {{ poussin.texte|raw }}
+                    </p>
+                {% else %}
+                    <p>
+                        no records found
+                    </p>
+                {% endif %}
             </div>
             <div id="benjamins" class="tab-pane fade" role="tabpanel" aria-labelledby="benjamins-tab">
-                <h3>Benjamins - {{ benjamin.annee }}</h3>
-                <p>
-                    {{ benjamin.texte|raw }}
-                </p>
+                {% if benjamin %}
+                    <h3>Benjamins - {{ benjamin.annee }}</h3>
+                    <p>
+                        {{ benjamin.texte|raw }}
+                    </p>
+                {% else %}
+                    <p>
+                        no records found
+                    </p>
+                {% endif %}
             </div>
             <div id="minimes" class="tab-pane fade" role="tabpanel" aria-labelledby="minimes-tab">
-                <h3>Minimes - {{ minime.annee }}</h3>
-                <p>
-                    {{ minime.texte|raw }}
-                </p>
+                {% if minime %}
+                    <h3>Minimes - {{ minime.annee }}</h3>
+                    <p>
+                        {{ minime.texte|raw }}
+                    </p>
+                {% else %}
+                    <p>
+                        no records found
+                    </p>
+                {% endif %}
             </div>
             <div id="cadets" class="tab-pane fade" role="tabpanel" aria-labelledby="cadets-tab">
-                <h3>Cadets - {{ cadet.annee }}</h3>
-                <p>
-                    {{ cadet.texte|raw }}
-                </p>
+                {% if cadet %}
+                    <h3>Cadets - {{ cadet.annee }}</h3>
+                    <p>
+                        {{ cadet.texte|raw }}
+                    </p>
+                {% else %}
+                    <p>
+                        no records found
+                    </p>
+                {% endif %}
             </div>
             <div id="juniors" class="tab-pane fade" role="tabpanel" aria-labelledby="juniors-tab">
-                <h3>Juniors - {{ junior.annee }}</h3>
-                <p>
-                    {{ junior.texte|raw }}
-                </p>
+                {% if junior %}
+                    <h3>Juniors - {{ junior.annee }}</h3>
+                    <p>
+                        {{ junior.texte|raw }}
+                    </p>
+                {% else %}
+                    <p>
+                        no records found
+                    </p>
+                {% endif %}
             </div>
             <div id="seniors" class="tab-pane fade" role="tabpanel" aria-labelledby="seniors-tab">
-                <h3>Seniors - {{ senior.annee }}</h3>
-                <p>
-                    {{ senior.texte|raw }}
-                </p>
+                {% if senior %}
+                    <h3>Seniors - {{ senior.annee }}</h3>
+                    <p>
+                        {{ senior.texte|raw }}
+                    </p>
+                {% else %}
+                    <p>
+                        no records found
+                    </p>
+                {% endif %}
             </div>
         </div>
     </div>
