--- a/templates/actualites/actualites-nationale-internationale.html.twig
+++ b/templates/actualites/actualites-nationale-internationale.html.twig
@@ -9,8 +9,6 @@
                 <div class="col-md-3">
                     {% if post.image %}
                         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                             width="250"
-                             height="250"
                              src="{{ asset('uploads/natio/') }}{{ post.image }}" alt="">
                     {% else %}
                         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
@@ -27,11 +25,13 @@
                         </svg>
                     {% endif%}
                 </div>
-                <div class="col-md-7">
+                <div class="col-10 col-md-7 text-truncate">
                     <h2 class="featurette-heading">{{ post.title }}</h2>
-                    <p class="lead">{{ post.body }}</p>
+                    <p class="lead">
+                        {{ post.body|raw }}
+                    </p>
+                    <a href="{{ path('actualites-nationale-internationale_show', {'id': post.id}) }}">Voir l'article</a>
                 </div>
-                <a href="{{ path('actualites-nationale-internationale_show', {'id': post.id}) }}">Voir l'article</a>
             </div>
             <hr class="featurette-divider">
         {% else %}
