[~] knp_pagination_render responsive

--- a/templates/actualites/actualites-nationale-internationale.html.twig
+++ b/templates/actualites/actualites-nationale-internationale.html.twig
@@ -26,7 +26,7 @@
                 <td colspan="6">no records found</td>
             </tr>
         {% endfor %}
-        <div class="navigation text-center">
+        <div class="d-none d-md-block">
             {{ knp_pagination_render(posts) }}
         </div>
     </div>
