--- a/templates/actualites/actualites-club.html.twig
+++ b/templates/actualites/actualites-club.html.twig
@@ -29,7 +29,7 @@
                 <td colspan="6">no records found</td>
             </tr>
         {% endfor %}
-        <div>
+        <div class="d-none d-md-block">
             {{ knp_pagination_render(posts) }}
         </div>
     </div>
