--- a/templates/actualites/actualites-nationale-internationale-show.html.twig
+++ b/templates/actualites/actualites-nationale-internationale-show.html.twig
@@ -9,15 +9,15 @@
         <p><i class="fa fa-fw fa-calendar"></i>{{ post.createdAt|date('d/m/Y') }}</p>
         <hr/>
         {% if post.image %}
-            <a href="{{ asset('uploads/club/') }}{{ post.image }}" data-toggle="lightbox">
+            <a href="{{ asset('uploads/natio/') }}{{ post.image }}" data-toggle="lightbox">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                     src="{{ asset('uploads/club/') }}{{ post.image }}" alt="">
+                     src="{{ asset('uploads/natio/') }}{{ post.image }}" alt="">
             </a>
         {% endif %}
         <p>
             {{ post.body|raw }}
         </p>
-        <a href="{{ path('actualites-club') }}">Revenir à l'index</a>
+        <a href="{{ path('actualites-nationale-internationale') }}">Revenir à l'index</a>
     </div>
 {% endblock %}
 {% block javascripts %}
