--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -229,6 +229,11 @@
             <div class="container">
                 {{ wo_render_breadcrumbs() }}
             </div>
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
             {% block body %}{% endblock %}
         </div>
         <hr/>
