--- a/templates/club/contact.html.twig
+++ b/templates/club/contact.html.twig
@@ -7,7 +7,7 @@
         <h2>Contact</h2>
         {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Send"/>
+        <input type="submit" value="Envoyer"/>
         {{ form_end(form) }}
     </div>
     <div class="container text-center">
