--- a/templates/inscription/adhesion.html.twig
+++ b/templates/inscription/adhesion.html.twig
@@ -77,7 +77,7 @@
             </div>
         </div>
         <h2 class="text-center">
-            Tu veux te joindre à nous ? Clique <strong><a href="{{ path('downloadInscription') }}" target="_blank">ici</a></strong> !
+            Tu veux te joindre à nous ? Télécharge la fiche d'inscription <strong><a href="{{ path('downloadInscription') }}" target="_blank">ici</a></strong> !
         </h2>
     </div>
 {% endblock %}
