--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -119,6 +119,7 @@
                                 Actualités
                             </a>
                             <div class="dropdown-menu" style="background: #0B70C0" aria-labelledby="navbarActualitesMenuLink">
+                                <a class="dropdown-item" href="{{ path('evenements') }}">Evénements</a>
                                 <a class="dropdown-item" href="{{ path('actualites-club') }}">Actualités Club</a>
                                 <a class="dropdown-item" href="{{ path('actualites-nationale-internationale') }}">Actualités Nationale/Internationale</a>
                             </div>
