[~] more responsive on base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -181,8 +181,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col d-none d-md-block">
                             <h1 class="display-3 text-center" style="color: black"><strong>LUC JUDO</strong><br/>
+                                <small class="text-white">Judo - Ju Jitsu - Taiso - Ne Waza</small>
+                            </h1>
+                        </div>
+                        <div class="col d-md-none d-block">
+                            <h1 class="text-center" style="color: black"><strong>LUC JUDO</strong><br/>
                                 <small class="text-white">Judo - Ju Jitsu - Taiso - Ne Waza</small>
                             </h1>
                         </div>
